--- a/Программы/SoftEatsUser/package.json
+++ b/Программы/SoftEatsUser/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "expo": "~47.0.9",
+    "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-ionicons": "^4.6.5"
+    "react-native-ionicons": "^4.6.5",
+    "react-native-neu-element": "^1.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
