--- a/Программы/SoftEatsUser/package.json
+++ b/Программы/SoftEatsUser/package.json
@@ -10,13 +10,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/drawer": "^6.5.6",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
+    "@react-navigation/stack": "^6.3.10",
     "expo": "~47.0.9",
     "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-ionicons": "^4.6.5",
-    "react-native-neu-element": "^1.1.9"
+    "react-native-neu-element": "^1.1.9",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
