--- a/Программы/SoftEatsUser/package.json
+++ b/Программы/SoftEatsUser/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/drawer": "^6.5.6",
+    "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.9",
     "expo-linear-gradient": "^12.0.1",
@@ -20,7 +21,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-neu-element": "^1.1.9",
-    "react-native-reanimated": "^2.13.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0"
   },
